feat: upgrade to VertexRabbit Pro (SAST, Auto-Issues, 10RPM, A4F)

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # VertexRabbit Configuration
 # ===========================
 
-# Active AI Provider (choose one: featherlabs, openrouter, groq, a4f)
-AI_PROVIDER=featherlabs
+# Active AI Provider (choose one: a4f, openrouter, groq)
+AI_PROVIDER=a4f
 
-# FeatherLabs / GLM (Default - Free, High Rate Limits)
-# Get key at: https://featherlabs.online
-FEATHERLABS_API_KEY=your_featherlabs_key_here
+# A4F (Default - Access to 300+ models)
+# Get key at: https://a4f.co
+A4F_API_KEY=your_a4f_key_here
+A4F_BASE_URL=https://api.a4f.co/v1
+A4F_MODEL=provider-7/claude-3-7-sonnet-20250219
 
 # OpenRouter (Access to 300+ models including Claude, GPT-4)
 # Get key at: https://openrouter.ai
@@ -18,11 +20,7 @@ OPENROUTER_MODEL=deepseek/deepseek-chat-v3-0324
 GROQ_API_KEY=your_groq_key_here
 GROQ_MODEL=llama-3.3-70b-versatile
 
-# A4F (300+ models - Most powerful with Claude Opus)
-# Get key at: https://a4f.co
-A4F_API_KEY=your_a4f_key_here
-A4F_BASE_URL=https://api.a4f.co/v1
-A4F_MODEL=provider-7/claude-opus-4-5-20251101
+# A4F Config moved to default section above
 
 # GitHub App Configuration
 # Create app at: https://github.com/settings/apps
